--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="nuevo.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Downstream Panguipulli | Home</title>
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logorafting.jpeg" alt="Downstream Panguipulli Logo">
@@ -14,7 +16,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
-            <a href="index.html">Site Plan</a>
+            <a href="downstrean.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
@@ -30,7 +32,7 @@
             </div>
         </section>
     </div>
-    <main class="home-grid">
+    <main class="home-grid  ">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers1.jpg" alt="river in forest">
             <img class="icon" src="images/iconorio.png" alt="river icon">
@@ -41,6 +43,7 @@
             <img class="icon" src="images/iconofire1.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
+        <div id="background"></div>
         <section class="rapids-card">
             <img class="card-img" src="images/velocidad1.jpg" alt="rafting boat">
             <img class="icon" src="images/icono2.png" alt="oars icon">
@@ -55,19 +58,20 @@
     </main>
     <footer>
         <p>Downstream Panguipulli &copy; 2023 - Oscar Moncada</p>
-        <p><a href="index.html">Site Plan</a></p>
+        <p><a href="downstrean.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
+    </div>
 </body>
 </html>
